<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottomsheet_bg">

        <View
            android:id="@+id/bottomsheet_drag_handler"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/nxs_bottomsheet_drag_handle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="@string/choose_your_option"
            android:textSize="15sp"
            android:textColor="@color/primary_text_color"
            android:letterSpacing="0.05"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/bottomsheet_drag_handler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signUpBtn"
            style="@style/NxsCommonCustomBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nxs_device_padding"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/readNewsBtn"
            style="@style/NxsCommonOutlineCustomBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nxs_device_padding"
            android:layout_marginBottom="@dimen/nxs_device_padding"
            android:text="@string/read_news"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>